unpackaged/main/default/objects/IICS_LeadPlatformEvent__e/IICS_LeadPlatformEvent__e.object-meta.xml
<CustomObject>
    <label>IICS_LeadPlatformEvent</label>
    <pluralLabel>IICS_LeadPlatformEvents</pluralLabel>
</CustomObject>